--- a/index.html
+++ b/index.html
@@ -337,8 +337,8 @@ input{
   <div class="tab">
 
     
-    <button class="button">Hire Me</button>
-    <button class="button">Download CV</button>
+    <a href="Contact.html"><button class="button">Hire Me </button></a>
+    <a href="Resume.html"><button class="button">Download CV</button></a>
   </div>
   </div>
 </div>
