--- a/index.html
+++ b/index.html
@@ -337,8 +337,8 @@ input{
   <div class="tab">
 
     
-    <a href="Contact.html"><button class="button">Hire Me </button></a>
-    <a href="Resume.html"><button class="button">Download CV</button></a>
+    <a href="https://dora1112.github.io/Portfolio/Contact.html"><button class="button">Hire Me </button></a>
+    <a href="https://dora1112.github.io/Portfolio/Resume.html"><button class="button">Download CV</button></a>
   </div>
   </div>
 </div>
