--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
-   <link rel="stylesheet" href="style.css">
-  
+  <link rel="stylesheet" href="style.css">
+ 
 </head>
 
   <body>
@@ -38,8 +38,8 @@
   <div class="tab">
 
     
-    <a href="https://dora1112.github.io/Portfolio/Contact.html"><button class="button">Hire Me </button></a>
-    <a href="https://dora1112.github.io/Portfolio/Resume.html"><button class="button">Download CV</button></a>
+    <a href="Contact.html"><button class="button">Hire Me </button></a>
+    <a href="Resume.html"><button class="button">Download CV</button></a>
   </div>
   </div>
 </div>
