--- a/Resume.html
+++ b/Resume.html
@@ -28,8 +28,8 @@
         <div>
         <h4><u>Personal Information</u></h4>     
         <h3>NAME : Aarti Rajendra Chakranarayan </h3>
-        <h3>Contact No : 9876543210</h3>
-        <h3>Email Id : dora@gmail.com</h3>
+        <h3>Contact No :7666898826</h3>
+        <h3>Email Id : achakranarayan1112@gmail.com</h3>
         <h3>Date of Birth : 11/12/1999</h3>
         <h3>Gender : Female</h3>
         <h3>Natinality : Indian</h3>
